# ytc

./: .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  requirements.txt
.github/workflows/: ci.yml
cmake/: conan-bootstrap.cmake  language-standard.cmake
include/ytc/: configmap.hpp  metadata.hpp
include/ytc/metadata/ptr/: metadata.hpp
include/ytc/metadata/yaml/: metadata.hpp
include/ytc/ptr/: configmap.hpp
include/ytc/yaml/: configmap.hpp
src/: CMakeLists.txt  main.cpp
src/configmap/: CMakeLists.txt  configmap.cpp  metadata.cpp
src/configmap/yaml/: configmap.cpp
src/metadata/: CMakeLists.txt  metadata.cpp
src/metadata/yaml/: metadata.cpp
src/ytctype/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/configmap/: decode.test.cpp  encode.test.cpp  simple.test.cpp
tests/env/: base.cpp  base.hpp
tests/fixtures/: configmap.yml
tests/metadata/: decode.test.cpp  encode.test.cpp  simple.test.cpp
